Coloring in multiple pages, styling for Biz Consult page, change navbar mouseenter color, solve bug re: hero image creating unwanted horizontal scrollbar, font size on multiple pages. 1.5 hours

--- a/main.css
+++ b/main.css
@@ -28,7 +28,6 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
     -webkit-backdrop-filter: blur(8px) contrast(100%);
 }
 
-
 #titleLogo {
     border: 5px solid black;
     max-height: 80px;
@@ -83,19 +82,20 @@ body {
 }
 
 .topRow {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
 }
 
 .topDiv {
-    width: 98vw;
+    width: 97vw;
     height: 70vh;
     position: relative;
     background-size: 100vw 70vh;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    border-radius: 5px;
 }
 
 .heroDiv {
@@ -105,6 +105,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 115, 230, 0.68);
+    border-radius: 5px;
 }
 
 .heroTextRow {
@@ -114,7 +115,7 @@ body {
 }
 
 .heroTextDiv {
-    border: 1px solid black;
+   
     color: white;
 }
 
@@ -130,7 +131,6 @@ h3 {
     margin: 50px auto;
     display: flex;
     justify-content: center;
-    border: 1px solid red;
 }
 
 .boxes {
@@ -143,7 +143,6 @@ h3 {
 .thirdRow {
     display: flex;
     justify-content: center;
-    border: 1px solid black;
 }
 
 .contactForms {
@@ -280,7 +279,7 @@ h3 {
 }
 
 #empPayPageHero {
-    margin-top: 12vh;
+    margin-top: 8vh;
 }
 
 #empPayDiv {
@@ -324,9 +323,12 @@ h3 {
 #rdTaxDescriptor {
     display: block;
     align-items: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    padding: 25px;
+    border-radius: 5px;
     margin: 15px auto;
     background-color: rgb(155, 81, 224, 0.8);
+    font-size: calc(12px + 1.2vw);
 }
 
 
@@ -394,6 +396,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #fcb900;
 }
 
 .ertcDescriptors {
@@ -406,7 +409,7 @@ h3 {
 
 /* PAYMENT PROCESSING PAGE */
 #topDivPayProcess {
-    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678301248/LEARCO/Diverse5.jpg");
+    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1679032576/LEARCO/Diverse5.jpg");
 }
 
 #payProcessPageHero {
@@ -437,6 +440,7 @@ h3 {
     background-color: #0693e3;
     border-radius: 5px;
     padding: 50px 0;
+    font-size: calc(8px + 0.6vw);
 }
 
 .equipFinIcons {
@@ -446,7 +450,7 @@ h3 {
 
 /* BIZ CONSULT PAGE */
 #topDivBizConsult {
-    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678301236/LEARCO/Diverse8.jpg");
+    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1679032821/LEARCO/Diverse8.jpg");
 }
 
 #bizConsultPageHero {
@@ -460,6 +464,25 @@ h3 {
     text-align: center;
 }
 
+#thirdRowBizConsult {
+    text-align: center;
+    margin: 25px auto;
+    background-color: #cf2e2e;
+}
+
+#fourthRowBizConsult {
+    text-align: center;
+    margin: 25px auto;
+    background-color: aliceblue;
+}
+
+#fifthRowBizConsult {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 25px auto;
+    background-color: #cf2e2e;
+}
 
 /* FOOTER ALL PAGES */
 /* #footBox {
@@ -471,7 +494,7 @@ h3 {
     display: flex;
     justify-content: center;
     border: 1px solid black;
-    background-color: rgb(252, 185, 0, 0.85);
+    background-color: rgb(123, 220, 181, 0.85);
 }
 
 #footTag {
